- People for attack on Old Camp (Hymir, Dexter, ...) now go back to their original work after quest is completed
- respawning some Crystal Crawlers now for quest "Auras and Crystals"
- in case area at Bengar was cleaned without the help of Cronos the troops leave Orlan's tavern now
- maybe really fixed Wannabe being invincible sometimes
- Quest of Esteban only available for bandits now



1.0.6

General Fixes:

- Transforms don't reset player guild anymore
- Thorben's apprentice quest line can be completed now
- Constantino's last apprentice quest is closed now correctly
- Richard's wife doesn't die anymore while player is in sight



1.0.5

Enhancements:

- Tailor in Khorata now has a name

General Fixes:

- Skip's quest now can be solved even though player already joined a boarding troop
- Added missing log entry for Skip that he also wants 1500 gold and not just his paddles
- Quest "Lack of everything" should correctly be closed now
- fixed order of adding entry for Harad's last apprentice quest and closing the topic
- fixed wrong condition for dialog with Fortuno about Darrion
- fixed wrong condition for giving Harad the optional 5 pearls
- fixed condition for Harad's prison dialog
- fixed wrong name in log for quest "Witchcraft"
- fixed weird error where apprentice quest couldn't be solved even though all conditions were met
- Quest 'Up to Relendel' now gets properly closed
- Water Mages perform their old work after 'Pest' quest
- Jackal's Quest now fails in chapter 4 if not already completed
- Loading of the magic stone for Karras when killing the swampsharks works now
- Saturas' dialog about Shivar should work better now
- Backtransformation from skeleton now restores player guild correctly
- Log entry for "Informations for Torgan" should be triggered correctly now
- Transformation to Demon should be triggered correctly now
- Blueprint for Chemo Club not removed from inventory anymore